# quasi-web

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: deploy.yml
client/: Cargo.toml
client/src/: main.rs
k8s/: nginx.yaml  quasi-web-server.yaml
server/: Cargo.toml  Dockerfile  config.toml
server/src/: main.rs
