[workspace]
members = ["client", "server"]
resolver = "2"

[workspace.dependencies]
leptos = { version = "0.8", features = ["csr", "hydrate"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
toml = "0.8"
tokio = { version = "1.40", features = ["full"] }
