[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.9", features = ["macros"] }
leptos = { workspace = true }
serde = { workspace = true }
reqwest = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
serde_json = "1.0.140"
actix-files = "0.6.6"
actix-cors = "0.7.1"
